Fix frontpage align

--- a/website/src/assets/styles/Component.css
+++ b/website/src/assets/styles/Component.css
@@ -152,6 +152,11 @@
     flex-wrap: wrap;
 }
 
+.tile-grid-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 @media screen and (min-width: 1109px) {
 
     .tilegrid {
